--- a/src/assets/stylesheets/application/_modal.scss
+++ b/src/assets/stylesheets/application/_modal.scss
@@ -1,14 +1,14 @@
 .network-modal {
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
   overflow-y: scroll;
 
   .modal {
-    min-width: 558px;
     border-radius: 10px;
-    position: relative;
     min-height: 410px;
+    min-width: 558px;
+    position: relative;
 
     @media screen and (max-width: $tablet-width) {
       top: 30px;
@@ -27,17 +27,23 @@
       margin-bottom: 20px;
       text-transform: uppercase;
       font-size: 24px;
-      font-weight: bold;
+      font-weight: 700;
     }
 
     .description {
-      margin-bottom: 25px;
       color: #8197a2;
-      line-height: 24px;
       font-size: 13px;
+      line-height: 24px;
+      margin-bottom: 25px;
     }
 
     .close-button {
+      padding: 15px;
+      position: absolute;
+      right: -40px;
+      top: 40px;
+      z-index: 400000;
+
       i {
         &.icon {
           &:before {
@@ -45,12 +51,6 @@
           }
         }
       }
-
-      padding: 15px;
-      position: absolute;
-      right: -40px;
-      top: 40px;
-      z-index: 400000;
 
       &:hover {
         cursor: pointer;
@@ -65,5 +65,6 @@
         right: 0;
       }
     }
+
   }
 }
