--- a/src/assets/stylesheets/themes/_ethereum-classic.scss
+++ b/src/assets/stylesheets/themes/_ethereum-classic.scss
@@ -70,8 +70,12 @@ $button-bordered-border-color: $primary-color-dark;
 
 // modals
 $modal-background-color: #fff;
-$modal-overlay-background-color: $main-background-color;
+$modal-overlay-background-color: rgba($primary-color-darker, 0.9);
 $modal-title-color: $primary-color-dark;
+
+// mobile menu
+$mobile-menu-background-color: $primary-color-darker;
+$mobile-menu-overlay-color: rgba($primary-color-darker, 0.9);
 
 // loading
 $loading-item-background-color: $secondary-color;
